--- a/.kitchen.yml
+++ b/.kitchen.yml
@@ -6,10 +6,13 @@ provisioner:
   name: chef_solo
 
 platforms:
-  - name: ubuntu-12.04
-  - name: centos-6.4
+  - name: centos65
+    driver_config:
+      box: centos65
+      box_url: http://opscode-vm-bento.s3.amazonaws.com/vagrant/virtualbox/opscode_centos-6.5_chef-provisionerless.box
 
 suites:
   - name: default
     run_list:
+      - role[unix-base]
     attributes:
