Import java version 1.31.0

--- a/cookbooks/java/Gemfile
+++ b/cookbooks/java/Gemfile
@@ -1,17 +1,15 @@
-source "https://rubygems.org"
+source 'https://rubygems.org'
 
-gem "berkshelf"
+gem 'rake'
+gem 'berkshelf', '~> 3.2.1'
 
 group :test do
-  gem "chefspec"
-  gem "foodcritic"
-  gem "guard"
-  gem "guard-rspec"
-  gem "guard-kitchen"
-  gem "rb-inotify", :require => false
-  gem "rb-fsevent", :require => false
-  gem "rb-fchange", :require => false
+  gem 'foodcritic', '~> 4.0.0'
+  gem 'rubocop', '~> 0.27.1'
+  gem 'chefspec', '~> 4.1.1'
 end
 
-gem "test-kitchen", "1.0.0.alpha.6"
-gem "kitchen-vagrant", "0.10.0"
+group :integration do
+  gem 'test-kitchen', '~> 1.2.1'
+  gem 'kitchen-vagrant', '~> 0.15'
+end
